--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sociability-web",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "tsx db/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,21 +13,26 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@neondatabase/serverless": "^1.0.0",
     "@prisma/adapter-neon": "^6.9.0",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcrypt-ts-edge": "^3.0.1",
     "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "ws": "^8.18.2",
     "zod": "^3.25.49"
@@ -36,6 +44,7 @@
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "tw-animate-css": "^1.3.1",
     "typescript": "^5"
   }
