--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@hookform/resolvers": "^5.1.1",
     "@neondatabase/serverless": "^1.0.0",
     "@prisma/adapter-neon": "^6.9.0",
     "@prisma/client": "^6.9.0",
@@ -32,10 +33,11 @@
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "ws": "^8.18.2",
-    "zod": "^3.25.49"
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
