--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.1.1",
     "@neondatabase/serverless": "^1.0.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/adapter-neon": "^6.9.0",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.10.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-slot": "^1.2.3",
     "bcrypt-ts-edge": "^3.0.1",
     "bufferutil": "^4.0.9",
@@ -30,7 +34,6 @@
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
-    "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
@@ -41,11 +44,16 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
+    "dotenv": "^16.5.0",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.3.1",
     "typescript": "^5"
